# ringier_AI-BE_zadanie

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  auth.py  config.py  dokumentacia-basic.txt  get_token.py  hash_password.py  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
routes/: auth_routes.py  authentication.py  content_generation.py  general.py  generate_article.py  login.py  signup.py  user_management.py  user_settings.py  weather_city.py
tests/: test_db_and_weatherAPI_connection.py
utils/: article_generator.py  db_conn.py  language_utils.py  style_utils.py
